versions/0.8.1/_sources/refs/_aws-cdk_aws-servicecatalog.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"x6tlAc9rx/7PBtKosI1/ho6oXwANDnBPulf09Cd2mMA="}

@aws-cdk/aws-servicecatalog
===========================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/servicecatalog/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:servicecatalog:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="servicecatalog" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>servicecatalog</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:servicecatalog:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='servicecatalog', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-servicecatalog/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-servicecatalog@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-servicecatalog": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-servicecatalog@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-servicecatalog/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-servicecatalog@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-servicecatalog": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-servicecatalog@0.8.1



.. mdinclude:: ./__aws-cdk_aws-servicecatalog.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-servicecatalog

CloudFormationProductProductName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProductName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductProductName;

      .. code-tab:: javascript

         const { CloudFormationProductProductName } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductProductName } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProductProvisioningArtifactIds
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProvisioningArtifactIds([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductProvisioningArtifactIds;

      .. code-tab:: javascript

         const { CloudFormationProductProvisioningArtifactIds } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductProvisioningArtifactIds } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProductProvisioningArtifactNames
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProvisioningArtifactNames([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductProvisioningArtifactNames;

      .. code-tab:: javascript

         const { CloudFormationProductProvisioningArtifactNames } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductProvisioningArtifactNames } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProvisionedProductCloudformationStackArn
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductCloudformationStackArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProvisionedProductCloudformationStackArn;

      .. code-tab:: javascript

         const { CloudFormationProvisionedProductCloudformationStackArn } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProvisionedProductCloudformationStackArn } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CloudFormationProvisionedProductRecordId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductRecordId([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProvisionedProductRecordId;

      .. code-tab:: javascript

         const { CloudFormationProvisionedProductRecordId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProvisionedProductRecordId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

PortfolioName
^^^^^^^^^^^^^

.. py:class:: PortfolioName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.PortfolioName;

      .. code-tab:: javascript

         const { PortfolioName } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { PortfolioName } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-servicecatalog.cloudformation

AcceptedPortfolioShareResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AcceptedPortfolioShareResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.AcceptedPortfolioShareResource;

      .. code-tab:: javascript

         const { cloudformation.AcceptedPortfolioShareResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.AcceptedPortfolioShareResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AcceptedPortfolioShareResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AcceptedPortfolioShareResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.AcceptedPortfolioShareResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


AcceptedPortfolioShareResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AcceptedPortfolioShareResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.AcceptedPortfolioShareResourceProps;

      .. code-tab:: javascript

         // cloudformation.AcceptedPortfolioShareResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AcceptedPortfolioShareResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::AcceptedPortfolioShare.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-acceptedportfolioshare.html#cfn-servicecatalog-acceptedportfolioshare-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::AcceptedPortfolioShare.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-acceptedportfolioshare.html#cfn-servicecatalog-acceptedportfolioshare-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


CloudFormationProductResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProductResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProductResource;

      .. code-tab:: javascript

         const { cloudformation.CloudFormationProductResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProductResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CloudFormationProductResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CloudFormationProductResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProductResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cloudFormationProductProductName

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProductName` *(readonly)*


   .. py:attribute:: cloudFormationProductProvisioningArtifactIds

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProvisioningArtifactIds` *(readonly)*


   .. py:attribute:: cloudFormationProductProvisioningArtifactNames

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProvisioningArtifactNames` *(readonly)*

   .. py:class:: ProvisioningArtifactPropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty } from '@aws-cdk/aws-servicecatalog';





      .. py:attribute:: description

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: info

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Info``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-info


         :type: json or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



CloudFormationProductResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProductResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProductResourceProps;

      .. code-tab:: javascript

         // cloudformation.CloudFormationProductResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProductResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: cloudFormationProductName

      ``AWS::ServiceCatalog::CloudFormationProduct.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: owner

      ``AWS::ServiceCatalog::CloudFormationProduct.Owner``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-owner


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: provisioningArtifactParameters

      ``AWS::ServiceCatalog::CloudFormationProduct.ProvisioningArtifactParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactparameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::CloudFormationProduct.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::CloudFormationProduct.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: distributor

      ``AWS::ServiceCatalog::CloudFormationProduct.Distributor``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-distributor


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportDescription

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supportdescription


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportEmail

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportEmail``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supportemail


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: supportUrl

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportUrl``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supporturl


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::CloudFormationProduct.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


CloudFormationProvisionedProductResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProvisionedProductResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProvisionedProductResource;

      .. code-tab:: javascript

         const { cloudformation.CloudFormationProvisionedProductResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProvisionedProductResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CloudFormationProvisionedProductResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CloudFormationProvisionedProductResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProvisionedProductResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cloudFormationProvisionedProductCloudformationStackArn

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductCloudformationStackArn` *(readonly)*


   .. py:attribute:: cloudFormationProvisionedProductRecordId

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductRecordId` *(readonly)*

   .. py:class:: ProvisioningParameterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty;

         .. code-tab:: javascript

            // cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty } from '@aws-cdk/aws-servicecatalog';





      .. py:attribute:: key

         ``CloudFormationProvisionedProductResource.ProvisioningParameterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationprovisionedproduct-provisioningparameter.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameter-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``CloudFormationProvisionedProductResource.ProvisioningParameterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationprovisionedproduct-provisioningparameter.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameter-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



CloudFormationProvisionedProductResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProvisionedProductResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProvisionedProductResourceProps;

      .. code-tab:: javascript

         // cloudformation.CloudFormationProvisionedProductResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProvisionedProductResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: notificationArns

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.NotificationArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-notificationarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: pathId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.PathId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-pathid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: productName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProductName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-productname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisionedProductName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisionedProductName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisionedproductname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisioningArtifactId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningArtifactId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningartifactid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisioningArtifactName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningArtifactName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningartifactname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: provisioningParameters

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


LaunchNotificationConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchNotificationConstraintResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchNotificationConstraintResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchNotificationConstraintResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.LaunchNotificationConstraintResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchNotificationConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchNotificationConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchNotificationConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


LaunchNotificationConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchNotificationConstraintResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchNotificationConstraintResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchNotificationConstraintResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchNotificationConstraintResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: notificationArns

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.NotificationArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-notificationarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


LaunchRoleConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchRoleConstraintResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchRoleConstraintResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchRoleConstraintResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.LaunchRoleConstraintResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchRoleConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchRoleConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchRoleConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


LaunchRoleConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchRoleConstraintResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchRoleConstraintResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchRoleConstraintResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchRoleConstraintResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchRoleConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchRoleConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: roleArn

      ``AWS::ServiceCatalog::LaunchRoleConstraint.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchRoleConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchRoleConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


LaunchTemplateConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchTemplateConstraintResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchTemplateConstraintResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchTemplateConstraintResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.LaunchTemplateConstraintResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchTemplateConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchTemplateConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchTemplateConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


LaunchTemplateConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchTemplateConstraintResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchTemplateConstraintResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchTemplateConstraintResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchTemplateConstraintResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: rules

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.Rules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-rules


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PortfolioPrincipalAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioPrincipalAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioPrincipalAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioPrincipalAssociationResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioPrincipalAssociationResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioPrincipalAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioPrincipalAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioPrincipalAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PortfolioPrincipalAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioPrincipalAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioPrincipalAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioPrincipalAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioPrincipalAssociationResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: principalArn

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PrincipalARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-principalarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: principalType

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PrincipalType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-principaltype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PortfolioProductAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioProductAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioProductAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioProductAssociationResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioProductAssociationResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioProductAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioProductAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioProductAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PortfolioProductAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioProductAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioProductAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioProductAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioProductAssociationResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-productid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioProductAssociation.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sourcePortfolioId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.SourcePortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-sourceportfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PortfolioResource
~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: portfolioName

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioName` *(readonly)*


PortfolioResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: displayName

      ``AWS::ServiceCatalog::Portfolio.DisplayName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-displayname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: providerName

      ``AWS::ServiceCatalog::Portfolio.ProviderName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-providername


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::Portfolio.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::Portfolio.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::Portfolio.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


PortfolioShareResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioShareResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioShareResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioShareResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioShareResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioShareResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioShareResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioShareResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PortfolioShareResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioShareResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioShareResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioShareResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioShareResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: accountId

      ``AWS::ServiceCatalog::PortfolioShare.AccountId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-accountid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioShare.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioShare.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


TagOptionAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.TagOptionAssociationResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.TagOptionAssociationResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TagOptionAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TagOptionAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.TagOptionAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


TagOptionAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.TagOptionAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TagOptionAssociationResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: resourceId

      ``AWS::ServiceCatalog::TagOptionAssociation.ResourceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoptionassociation.html#cfn-servicecatalog-tagoptionassociation-resourceid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: tagOptionId

      ``AWS::ServiceCatalog::TagOptionAssociation.TagOptionId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoptionassociation.html#cfn-servicecatalog-tagoptionassociation-tagoptionid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


TagOptionResource
~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionResource;

      .. code-tab:: javascript

         const { cloudformation.TagOptionResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.TagOptionResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TagOptionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TagOptionResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.TagOptionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


TagOptionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionResourceProps;

      .. code-tab:: javascript

         // cloudformation.TagOptionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TagOptionResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: key

      ``AWS::ServiceCatalog::TagOption.Key``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-key


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: value

      ``AWS::ServiceCatalog::TagOption.Value``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-value


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: active

      ``AWS::ServiceCatalog::TagOption.Active``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-active


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-servicecatalog

