versions/0.9.0/_sources/refs/_aws-cdk_aws-servicecatalog.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"K1ecx6W9fUY9SLh4QTTqnmoszyGAnfDJbAzbyvku+3A="}

@aws-cdk/aws-servicecatalog
===========================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.ServiceCatalog/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.ServiceCatalog" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.ServiceCatalog --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.ServiceCatalog" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/servicecatalog/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:servicecatalog:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="servicecatalog" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>servicecatalog</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:servicecatalog:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='servicecatalog', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-servicecatalog/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-servicecatalog@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-servicecatalog": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-servicecatalog@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-servicecatalog/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-servicecatalog@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-servicecatalog": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-servicecatalog@0.9.0



.. mdinclude:: ./__aws-cdk_aws-servicecatalog.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-servicecatalog

AcceptedPortfolioShareId
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AcceptedPortfolioShareId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.AcceptedPortfolioShareId;

      .. code-tab:: javascript

         const { AcceptedPortfolioShareId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { AcceptedPortfolioShareId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProductId
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductId;

      .. code-tab:: javascript

         const { CloudFormationProductId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProductProductName
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProductName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductProductName;

      .. code-tab:: javascript

         const { CloudFormationProductProductName } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductProductName } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProductProvisioningArtifactIds
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProvisioningArtifactIds(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductProvisioningArtifactIds;

      .. code-tab:: javascript

         const { CloudFormationProductProvisioningArtifactIds } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductProvisioningArtifactIds } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProductProvisioningArtifactNames
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProductProvisioningArtifactNames(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProductProvisioningArtifactNames;

      .. code-tab:: javascript

         const { CloudFormationProductProvisioningArtifactNames } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProductProvisioningArtifactNames } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProvisionedProductCloudformationStackArn
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductCloudformationStackArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProvisionedProductCloudformationStackArn;

      .. code-tab:: javascript

         const { CloudFormationProvisionedProductCloudformationStackArn } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProvisionedProductCloudformationStackArn } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProvisionedProductId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProvisionedProductId;

      .. code-tab:: javascript

         const { CloudFormationProvisionedProductId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProvisionedProductId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

CloudFormationProvisionedProductRecordId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CloudFormationProvisionedProductRecordId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.CloudFormationProvisionedProductRecordId;

      .. code-tab:: javascript

         const { CloudFormationProvisionedProductRecordId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { CloudFormationProvisionedProductRecordId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LaunchNotificationConstraintId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LaunchNotificationConstraintId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.LaunchNotificationConstraintId;

      .. code-tab:: javascript

         const { LaunchNotificationConstraintId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { LaunchNotificationConstraintId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LaunchRoleConstraintId
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LaunchRoleConstraintId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.LaunchRoleConstraintId;

      .. code-tab:: javascript

         const { LaunchRoleConstraintId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { LaunchRoleConstraintId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LaunchTemplateConstraintId
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LaunchTemplateConstraintId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.LaunchTemplateConstraintId;

      .. code-tab:: javascript

         const { LaunchTemplateConstraintId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { LaunchTemplateConstraintId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PortfolioId
^^^^^^^^^^^

.. py:class:: PortfolioId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.PortfolioId;

      .. code-tab:: javascript

         const { PortfolioId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { PortfolioId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PortfolioName
^^^^^^^^^^^^^

.. py:class:: PortfolioName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.PortfolioName;

      .. code-tab:: javascript

         const { PortfolioName } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { PortfolioName } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PortfolioPrincipalAssociationId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PortfolioPrincipalAssociationId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.PortfolioPrincipalAssociationId;

      .. code-tab:: javascript

         const { PortfolioPrincipalAssociationId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { PortfolioPrincipalAssociationId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PortfolioProductAssociationId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PortfolioProductAssociationId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.PortfolioProductAssociationId;

      .. code-tab:: javascript

         const { PortfolioProductAssociationId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { PortfolioProductAssociationId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

PortfolioShareId
^^^^^^^^^^^^^^^^

.. py:class:: PortfolioShareId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.PortfolioShareId;

      .. code-tab:: javascript

         const { PortfolioShareId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { PortfolioShareId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TagOptionAssociationId
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TagOptionAssociationId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.TagOptionAssociationId;

      .. code-tab:: javascript

         const { TagOptionAssociationId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { TagOptionAssociationId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TagOptionId
^^^^^^^^^^^

.. py:class:: TagOptionId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.TagOptionId;

      .. code-tab:: javascript

         const { TagOptionId } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { TagOptionId } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-servicecatalog.cloudformation

AcceptedPortfolioShareResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AcceptedPortfolioShareResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.AcceptedPortfolioShareResource;

      .. code-tab:: javascript

         const { cloudformation.AcceptedPortfolioShareResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.AcceptedPortfolioShareResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AcceptedPortfolioShareResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AcceptedPortfolioShareResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.AcceptedPortfolioShareResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.AcceptedPortfolioShareId` *(readonly)*


AcceptedPortfolioShareResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AcceptedPortfolioShareResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.AcceptedPortfolioShareResourceProps;

      .. code-tab:: javascript

         // cloudformation.AcceptedPortfolioShareResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AcceptedPortfolioShareResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::AcceptedPortfolioShare.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-acceptedportfolioshare.html#cfn-servicecatalog-acceptedportfolioshare-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::AcceptedPortfolioShare.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-acceptedportfolioshare.html#cfn-servicecatalog-acceptedportfolioshare-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


CloudFormationProductResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProductResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProductResource;

      .. code-tab:: javascript

         const { cloudformation.CloudFormationProductResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProductResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CloudFormationProductResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CloudFormationProductResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProductResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cloudFormationProductProductName

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProductName` *(readonly)*


   .. py:attribute:: cloudFormationProductProvisioningArtifactIds

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProvisioningArtifactIds` *(readonly)*


   .. py:attribute:: cloudFormationProductProvisioningArtifactNames

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductProvisioningArtifactNames` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProductId` *(readonly)*

   .. py:class:: ProvisioningArtifactPropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ServiceCatalog;

         .. code-tab:: java

            import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty } from '@aws-cdk/aws-servicecatalog';





      .. py:attribute:: info

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Info``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-info


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: description

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-description


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: name

         ``CloudFormationProductResource.ProvisioningArtifactPropertiesProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationproduct-provisioningartifactproperties.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactproperties-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



CloudFormationProductResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProductResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProductResourceProps;

      .. code-tab:: javascript

         // cloudformation.CloudFormationProductResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProductResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: cloudFormationProductName

      ``AWS::ServiceCatalog::CloudFormationProduct.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: owner

      ``AWS::ServiceCatalog::CloudFormationProduct.Owner``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-owner


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: provisioningArtifactParameters

      ``AWS::ServiceCatalog::CloudFormationProduct.ProvisioningArtifactParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-provisioningartifactparameters


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProductResource.ProvisioningArtifactPropertiesProperty`)[]


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::CloudFormationProduct.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::CloudFormationProduct.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: distributor

      ``AWS::ServiceCatalog::CloudFormationProduct.Distributor``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-distributor


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: supportDescription

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supportdescription


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: supportEmail

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportEmail``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supportemail


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: supportUrl

      ``AWS::ServiceCatalog::CloudFormationProduct.SupportUrl``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-supporturl


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::CloudFormationProduct.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationproduct.html#cfn-servicecatalog-cloudformationproduct-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


CloudFormationProvisionedProductResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProvisionedProductResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProvisionedProductResource;

      .. code-tab:: javascript

         const { cloudformation.CloudFormationProvisionedProductResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProvisionedProductResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CloudFormationProvisionedProductResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CloudFormationProvisionedProductResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProvisionedProductResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cloudFormationProvisionedProductCloudformationStackArn

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductCloudformationStackArn` *(readonly)*


   .. py:attribute:: cloudFormationProvisionedProductRecordId

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductRecordId` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.CloudFormationProvisionedProductId` *(readonly)*

   .. py:class:: ProvisioningParameterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ServiceCatalog;

         .. code-tab:: java

            import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty;

         .. code-tab:: javascript

            // cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty } from '@aws-cdk/aws-servicecatalog';





      .. py:attribute:: key

         ``CloudFormationProvisionedProductResource.ProvisioningParameterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationprovisionedproduct-provisioningparameter.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameter-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: value

         ``CloudFormationProvisionedProductResource.ProvisioningParameterProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-servicecatalog-cloudformationprovisionedproduct-provisioningparameter.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameter-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



CloudFormationProvisionedProductResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CloudFormationProvisionedProductResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.CloudFormationProvisionedProductResourceProps;

      .. code-tab:: javascript

         // cloudformation.CloudFormationProvisionedProductResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CloudFormationProvisionedProductResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: notificationArns

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.NotificationArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-notificationarns


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: pathId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.PathId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-pathid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-productid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: productName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProductName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-productname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: provisionedProductName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisionedProductName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisionedproductname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: provisioningArtifactId

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningArtifactId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningartifactid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: provisioningArtifactName

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningArtifactName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningartifactname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: provisioningParameters

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.ProvisioningParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-provisioningparameters


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.CloudFormationProvisionedProductResource.ProvisioningParameterProperty`)[] or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::CloudFormationProvisionedProduct.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-cloudformationprovisionedproduct.html#cfn-servicecatalog-cloudformationprovisionedproduct-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


LaunchNotificationConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchNotificationConstraintResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchNotificationConstraintResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchNotificationConstraintResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.LaunchNotificationConstraintResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchNotificationConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchNotificationConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchNotificationConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.LaunchNotificationConstraintId` *(readonly)*


LaunchNotificationConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchNotificationConstraintResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchNotificationConstraintResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchNotificationConstraintResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchNotificationConstraintResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: notificationArns

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.NotificationArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-notificationarns


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchNotificationConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchnotificationconstraint.html#cfn-servicecatalog-launchnotificationconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


LaunchRoleConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchRoleConstraintResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchRoleConstraintResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchRoleConstraintResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.LaunchRoleConstraintResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchRoleConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchRoleConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchRoleConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.LaunchRoleConstraintId` *(readonly)*


LaunchRoleConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchRoleConstraintResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchRoleConstraintResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchRoleConstraintResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchRoleConstraintResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchRoleConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchRoleConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: roleArn

      ``AWS::ServiceCatalog::LaunchRoleConstraint.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchRoleConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchRoleConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchroleconstraint.html#cfn-servicecatalog-launchroleconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


LaunchTemplateConstraintResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchTemplateConstraintResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchTemplateConstraintResource;

      .. code-tab:: javascript

         const { cloudformation.LaunchTemplateConstraintResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.LaunchTemplateConstraintResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LaunchTemplateConstraintResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LaunchTemplateConstraintResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.LaunchTemplateConstraintResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.LaunchTemplateConstraintId` *(readonly)*


LaunchTemplateConstraintResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LaunchTemplateConstraintResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.LaunchTemplateConstraintResourceProps;

      .. code-tab:: javascript

         // cloudformation.LaunchTemplateConstraintResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LaunchTemplateConstraintResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-productid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: rules

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.Rules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-rules


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::LaunchTemplateConstraint.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-launchtemplateconstraint.html#cfn-servicecatalog-launchtemplateconstraint-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


PortfolioPrincipalAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioPrincipalAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioPrincipalAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioPrincipalAssociationResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioPrincipalAssociationResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioPrincipalAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioPrincipalAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioPrincipalAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioPrincipalAssociationId` *(readonly)*


PortfolioPrincipalAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioPrincipalAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioPrincipalAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioPrincipalAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioPrincipalAssociationResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: principalArn

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PrincipalARN``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-principalarn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: principalType

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.PrincipalType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-principaltype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioPrincipalAssociation.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioprincipalassociation.html#cfn-servicecatalog-portfolioprincipalassociation-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


PortfolioProductAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioProductAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioProductAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioProductAssociationResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioProductAssociationResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioProductAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioProductAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioProductAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioProductAssociationId` *(readonly)*


PortfolioProductAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioProductAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioProductAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioProductAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioProductAssociationResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: productId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.ProductId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-productid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioProductAssociation.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: sourcePortfolioId

      ``AWS::ServiceCatalog::PortfolioProductAssociation.SourcePortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioproductassociation.html#cfn-servicecatalog-portfolioproductassociation-sourceportfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


PortfolioResource
~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: portfolioName

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioName` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioId` *(readonly)*


PortfolioResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: displayName

      ``AWS::ServiceCatalog::Portfolio.DisplayName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-displayname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: providerName

      ``AWS::ServiceCatalog::Portfolio.ProviderName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-providername


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::Portfolio.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: description

      ``AWS::ServiceCatalog::Portfolio.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: tags

      ``AWS::ServiceCatalog::Portfolio.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolio.html#cfn-servicecatalog-portfolio-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


PortfolioShareResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioShareResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioShareResource;

      .. code-tab:: javascript

         const { cloudformation.PortfolioShareResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.PortfolioShareResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PortfolioShareResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PortfolioShareResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.PortfolioShareResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.PortfolioShareId` *(readonly)*


PortfolioShareResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PortfolioShareResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.PortfolioShareResourceProps;

      .. code-tab:: javascript

         // cloudformation.PortfolioShareResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PortfolioShareResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: accountId

      ``AWS::ServiceCatalog::PortfolioShare.AccountId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-accountid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: portfolioId

      ``AWS::ServiceCatalog::PortfolioShare.PortfolioId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-portfolioid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: acceptLanguage

      ``AWS::ServiceCatalog::PortfolioShare.AcceptLanguage``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-portfolioshare.html#cfn-servicecatalog-portfolioshare-acceptlanguage


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


TagOptionAssociationResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionAssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionAssociationResource;

      .. code-tab:: javascript

         const { cloudformation.TagOptionAssociationResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.TagOptionAssociationResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TagOptionAssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TagOptionAssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.TagOptionAssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.TagOptionAssociationId` *(readonly)*


TagOptionAssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionAssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionAssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.TagOptionAssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TagOptionAssociationResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: resourceId

      ``AWS::ServiceCatalog::TagOptionAssociation.ResourceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoptionassociation.html#cfn-servicecatalog-tagoptionassociation-resourceid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: tagOptionId

      ``AWS::ServiceCatalog::TagOptionAssociation.TagOptionId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoptionassociation.html#cfn-servicecatalog-tagoptionassociation-tagoptionid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


TagOptionResource
~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionResource;

      .. code-tab:: javascript

         const { cloudformation.TagOptionResource } = require('@aws-cdk/aws-servicecatalog');

      .. code-tab:: typescript

         import { cloudformation.TagOptionResource } from '@aws-cdk/aws-servicecatalog';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TagOptionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TagOptionResource``
   :type properties: :py:class:`~@aws-cdk/aws-servicecatalog.cloudformation.TagOptionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-servicecatalog.TagOptionId` *(readonly)*


TagOptionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TagOptionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ServiceCatalog;

      .. code-tab:: java

         import software.amazon.awscdk.services.servicecatalog.cloudformation.TagOptionResourceProps;

      .. code-tab:: javascript

         // cloudformation.TagOptionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TagOptionResourceProps } from '@aws-cdk/aws-servicecatalog';





   .. py:attribute:: key

      ``AWS::ServiceCatalog::TagOption.Key``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-key


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: value

      ``AWS::ServiceCatalog::TagOption.Value``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-value


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: active

      ``AWS::ServiceCatalog::TagOption.Active``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-servicecatalog-tagoption.html#cfn-servicecatalog-tagoption-active


      :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-servicecatalog

